--- a/.classpath
+++ b/.classpath
@@ -26,5 +26,10 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/junit/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/junit/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="lib/junit/jwebunit-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/junit/objenesis-tck-2.2.jar"/>
+	<classpathentry kind="lib" path="lib/junit/system-rules-1.16.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
