--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -12,6 +12,12 @@
 	<url-pattern>/*</url-pattern>
 </filter-mapping>
 
+<filter-mapping>
+	<filter-name>expires-filter</filter-name>
+	<url-pattern>*.css</url-pattern>
+</filter-mapping>
+
+
  <welcome-file-list>
    <welcome-file>pages/login.jsp</welcome-file>
  </welcome-file-list>
