Add notification listener
The changed plane and the position id will be displayed in console

--- a/.classpath
+++ b/.classpath
@@ -31,5 +31,10 @@
 	<classpathentry kind="lib" path="lib/junit/jwebunit-1.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/junit/objenesis-tck-2.2.jar"/>
 	<classpathentry kind="lib" path="lib/junit/system-rules-1.16.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Notify">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
