--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -17,5 +17,10 @@
  <welcome-file-list>
    <welcome-file>pages/login.jsp</welcome-file>
  </welcome-file-list>
+ 
+ <error-page>
+   <error-code>404</error-code>
+   <location>/pages/404error.jsp</location>
+ </error-page>
 
 </web-app>
