--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -22,5 +22,10 @@
    <error-code>404</error-code>
    <location>/pages/404error.jsp</location>
  </error-page>
+ 
+ <error-page>
+ 	<error-code>500</error-code>
+ 	<location>/pages/500error.jsp</location>
+ </error-page>
 
 </web-app>
