--- a/build.xml
+++ b/build.xml
@@ -2,14 +2,73 @@
 <!-- WARNING: Eclipse auto-generated file.
               Any modifications will be overwritten.
               To include a user specific buildfile here, simply create one in the same
-              directory with the processing instruction <?eclipse.ant.import?>
+              directory with the processing instruction <?eclipse.ant.import?> 
               as the first entry and export the buildfile again. --><project basedir="." default="build" name="HeathrowWebPage">
     <property environment="env"/>
     <property name="ECLIPSE_HOME" value="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/eclipse/"/>
+    <property name="junit.output.dir" value="junit"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.8"/>
     <property name="source" value="1.8"/>
-    <property name="junit.output.dir" value="junit"/>
+    <path id="Web App Libraries.libraryclasspath">
+        <pathelement location="WebContent/WEB-INF/lib/commons-fileupload-1.3.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/commons-io-2.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/commons-lang3-3.2.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/commons-logging-1.1.3.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/freemarker-2.3.22.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/javassist-3.11.0.GA.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/ognl-3.0.19.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/postgresql-9.4.1212.jre6.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/struts2-core-2.3.31.jar"/>
+        <pathelement location="WebContent/WEB-INF/lib/xwork-core-2.3.31.jar"/>
+    </path>
+    <path id="EAR Libraries.libraryclasspath"/>
+    <path id="struts2.userclasspath">
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/commons-fileupload-1.3.2.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/commons-io-2.2.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/commons-lang3-3.2.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/commons-logging-1.1.3.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/freemarker-2.3.22.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/javassist-3.11.0.GA.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/ognl-3.0.19.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/postgresql-9.4.1212.jre6.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/struts2-core-2.3.31.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/xwork-core-2.3.31.jar"/>
+    </path>
+    <path id="hibernate.userclasspath">
+        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/antlr-2.7.7.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/cdi-api-1.1.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/classmate-1.3.0.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/classmate-1.3.1.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/dom4j-1.6.1.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/el-api-2.2.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/geronimo-jta_1.1_spec-1.1.1.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/hibernate-commons-annotations-5.0.1.Final.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/hibernate-core-5.2.4.Final.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/hibernate-jpa-2.1-api-1.0.0.Final.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/hibernate-validator-5.3.3.Final.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/hibernate-validator-annotation-processor-5.3.3.Final.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/hibernate-validator-cdi-5.3.3.Final.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/jandex-2.0.0.Final.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/javassist-3.20.0-GA.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/javax.el-2.2.4.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/javax.el-api-2.2.4.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/javax.inject-1.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/jboss-interceptors-api_1.1_spec-1.0.0.Beta1.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/jboss-logging-3.3.0.Final.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/jsr250-api-1.0.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/validation-api-1.1.0.Final.jar"/>
+    </path>
+    <path id="JUnit.userclasspath">
+        <pathelement location="../../../../HeathrowWebPage/lib/junit/hamcrest-core-1.3.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/lib/junit/junit-4.12.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/lib/junit/jwebunit-1.1.1.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/lib/junit/objenesis-tck-2.2.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/lib/junit/system-rules-1.16.0.jar"/>
+    </path>
+    <path id="Notify.userclasspath">
+        <pathelement location="../../../../HeathrowWebPage/lib/pgjdbc-ng-0.6-complete.jar"/>
+    </path>
     <path id="Apache Tomcat v8.0 [Apache Tomcat v8.0].libraryclasspath">
         <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/annotations-api.jar"/>
         <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/catalina-ant.jar"/>
@@ -36,47 +95,31 @@
         <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/tomcat-websocket.jar"/>
         <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/websocket-api.jar"/>
     </path>
-    <path id="Web App Libraries.libraryclasspath">
-        <pathelement location="WebContent/WEB-INF/lib/postgresql-9.4.1212.jre6.jar"/>
-    </path>
-    <path id="EAR Libraries.libraryclasspath"/>
     <path id="HeathrowWebPage.classpath">
         <pathelement location="build/classes"/>
-        <path refid="Apache Tomcat v8.0 [Apache Tomcat v8.0].libraryclasspath"/>
         <path refid="Web App Libraries.libraryclasspath"/>
         <path refid="EAR Libraries.libraryclasspath"/>
-        <pathelement location="lib/hibernate/antlr-2.7.7.jar"/>
-        <pathelement location="lib/hibernate/cdi-api-1.1.jar"/>
-        <pathelement location="lib/hibernate/classmate-1.3.0.jar"/>
-        <pathelement location="lib/hibernate/classmate-1.3.1.jar"/>
-        <pathelement location="lib/hibernate/dom4j-1.6.1.jar"/>
-        <pathelement location="lib/hibernate/el-api-2.2.jar"/>
-        <pathelement location="lib/hibernate/geronimo-jta_1.1_spec-1.1.1.jar"/>
-        <pathelement location="lib/hibernate/hibernate-commons-annotations-5.0.1.Final.jar"/>
-        <pathelement location="lib/hibernate/hibernate-core-5.2.4.Final.jar"/>
-        <pathelement location="lib/hibernate/hibernate-jpa-2.1-api-1.0.0.Final.jar"/>
-        <pathelement location="lib/hibernate/hibernate-validator-5.3.3.Final.jar"/>
-        <pathelement location="lib/hibernate/hibernate-validator-annotation-processor-5.3.3.Final.jar"/>
-        <pathelement location="lib/hibernate/hibernate-validator-cdi-5.3.3.Final.jar"/>
-        <pathelement location="lib/hibernate/jandex-2.0.0.Final.jar"/>
-        <pathelement location="lib/hibernate/javassist-3.20.0-GA.jar"/>
-        <pathelement location="lib/hibernate/javax.el-2.2.4.jar"/>
-        <pathelement location="lib/hibernate/javax.el-api-2.2.4.jar"/>
-        <pathelement location="lib/hibernate/javax.inject-1.jar"/>
-        <pathelement location="lib/hibernate/jboss-interceptors-api_1.1_spec-1.0.0.Beta1.jar"/>
-        <pathelement location="lib/hibernate/jboss-logging-3.3.0.Final.jar"/>
-        <pathelement location="lib/hibernate/jsr250-api-1.0.jar"/>
-        <pathelement location="lib/hibernate/validation-api-1.1.0.Final.jar"/>
+        <path refid="struts2.userclasspath"/>
+        <path refid="hibernate.userclasspath"/>
+        <path refid="JUnit.userclasspath"/>
         <pathelement location="lib/junit/hamcrest-core-1.3.jar"/>
         <pathelement location="lib/junit/junit-4.12.jar"/>
         <pathelement location="lib/junit/jwebunit-1.1.1.jar"/>
         <pathelement location="lib/junit/objenesis-tck-2.2.jar"/>
         <pathelement location="lib/junit/system-rules-1.16.0.jar"/>
+        <path refid="Notify.userclasspath"/>
+        <path refid="Apache Tomcat v8.0 [Apache Tomcat v8.0].libraryclasspath"/>
+        <pathelement location="lib/mockito-all-1.10.19.jar"/>
     </path>
     <target name="init">
         <mkdir dir="build/classes"/>
         <copy includeemptydirs="false" todir="build/classes">
             <fileset dir="src">
+                <exclude name="**/*.java"/>
+            </fileset>
+        </copy>
+        <copy includeemptydirs="false" todir="build/classes">
+            <fileset dir="resources">
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
@@ -96,6 +139,7 @@
         <echo message="${ant.project.name}: ${ant.file}"/>
         <javac debug="true" debuglevel="${debuglevel}" destdir="build/classes" includeantruntime="false" source="${source}" target="${target}">
             <src path="src"/>
+            <src path="resources"/>
             <src path="tests"/>
             <classpath refid="HeathrowWebPage.classpath"/>
         </javac>
@@ -114,21 +158,21 @@
         <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
         <antcall target="build"/>
     </target>
-  	<target name="test">
-	<mkdir dir="${junit.output.dir}"/>
-	<junit fork="yes" printsummary="withOutAndErr">
-		<formatter type="xml"/>
-		<test name="HibernateDAOs.TestDAOAirline" todir="${junit.output.dir}"/>
-		<jvmarg line="-ea"/>
-		<classpath refid="HeathrowWebPage.classpath"/>
-	</junit>
-</target>
-<target name="junitreport">
-	<junitreport todir="${junit.output.dir}">
-		<fileset dir="${junit.output.dir}">
-			<include name="TEST-*.xml"/>
-		</fileset>
-		<report format="frames" todir="${junit.output.dir}"/>
-	</junitreport>
-</target>
+    <target name="TestDAOAirline">
+        <mkdir dir="${junit.output.dir}"/>
+        <junit fork="yes" printsummary="withOutAndErr">
+            <formatter type="xml"/>
+            <test name="HibernateDAOs.TestDAOAirline" todir="${junit.output.dir}"/>
+            <jvmarg line="-ea"/>
+            <classpath refid="HeathrowWebPage.classpath"/>
+        </junit>
+    </target>
+    <target name="junitreport">
+        <junitreport todir="${junit.output.dir}">
+            <fileset dir="${junit.output.dir}">
+                <include name="TEST-*.xml"/>
+            </fileset>
+            <report format="frames" todir="${junit.output.dir}"/>
+        </junitreport>
+    </target>
 </project>
