--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -15,7 +15,7 @@
 
 
  <welcome-file-list>
-   <welcome-file>pages/login.jsp</welcome-file>
+   <welcome-file>pages/index.jsp</welcome-file>
  </welcome-file-list>
  
  <error-page>
