Implementing socket IO(No working yet)

--- a/.classpath
+++ b/.classpath
@@ -37,5 +37,10 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/mockito-all-1.10.19.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/SocketIO">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
