--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -30,7 +30,7 @@
  
  <listener>  
     <listener-class>
-       databaseListener2.SocketIOInit
+       databaseListener.SocketIOInit
     </listener-class>
  </listener>
 
