--- a/build.xml
+++ b/build.xml
@@ -132,15 +132,15 @@
         <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/tomcat-websocket.jar"/>
         <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/websocket-api.jar"/>
     </path>
-    <path id="SocketIO.userclasspath">
-        <pathelement location="../../../../HeathrowWebPage/lib/SocketIO/jackson-annotations-2.8.1.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/SocketIO/jackson-core-2.8.1.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/SocketIO/jackson-databind-2.8.1.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/SocketIO/json-20160807.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/SocketIO/log4j-core-2.6.2.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/SocketIO/netty-all-4.1.5.Final.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/SocketIO/netty-socketio-1.7.7 .jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/SocketIO/slf4j-api-1.7.22.jar"/>
+    <path id="Socket.userclasspath">
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/jackson-annotations-2.8.1.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/jackson-core-2.8.1.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/jackson-databind-2.8.1.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/json-20160807.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/log4j-core-2.6.2.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/netty-all-4.1.5.Final.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/netty-socketio-1.7.7 .jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/slf4j-api-1.7.22.jar"/>
     </path>
     <path id="HeathrowWebPage.classpath">
         <pathelement location="build/classes"/>
@@ -157,7 +157,7 @@
         <path refid="Notify.userclasspath"/>
         <path refid="Apache Tomcat v8.0 [Apache Tomcat v8.0].libraryclasspath"/>
         <pathelement location="lib/mockito-all-1.10.19.jar"/>
-        <path refid="SocketIO.userclasspath"/>
+        <path refid="Socket.userclasspath"/>
     </path>
     <target name="init">
         <mkdir dir="build/classes"/>
