--- a/.classpath
+++ b/.classpath
@@ -37,6 +37,10 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/mockito-all-1.10.19.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Socket"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Socket">
+	<attributes>
+			<attribute name="javax.servlet.ServletContextListener" value="/WEB-INF/lib"/>
+	</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
