--- a/build.xml
+++ b/build.xml
@@ -72,30 +72,6 @@
         <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/struts2-core-2.3.31.jar"/>
         <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/xwork-core-2.3.31.jar"/>
     </path>
-    <path id="hibernate.userclasspath">
-        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/antlr-2.7.7.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/cdi-api-1.1.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/classmate-1.3.0.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/classmate-1.3.1.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/dom4j-1.6.1.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/el-api-2.2.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/geronimo-jta_1.1_spec-1.1.1.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/hibernate-commons-annotations-5.0.1.Final.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/hibernate-core-5.2.4.Final.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/hibernate-jpa-2.1-api-1.0.0.Final.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/hibernate-validator-5.3.3.Final.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/hibernate-validator-annotation-processor-5.3.3.Final.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/hibernate-validator-cdi-5.3.3.Final.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/jandex-2.0.0.Final.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/javassist-3.20.0-GA.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/javax.el-2.2.4.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/javax.el-api-2.2.4.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/javax.inject-1.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/jboss-interceptors-api_1.1_spec-1.0.0.Beta1.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/jboss-logging-3.3.0.Final.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/jsr250-api-1.0.jar"/>
-        <pathelement location="../../../../HeathrowWebPage/lib/hibernate/validation-api-1.1.0.Final.jar"/>
-    </path>
     <path id="JUnit.userclasspath">
         <pathelement location="../../../../HeathrowWebPage/lib/junit/hamcrest-core-1.3.jar"/>
         <pathelement location="../../../../HeathrowWebPage/lib/junit/junit-4.12.jar"/>
@@ -106,17 +82,7 @@
     <path id="Notify.userclasspath">
         <pathelement location="../../../../HeathrowWebPage/lib/pgjdbc-ng-0.6-complete.jar"/>
     </path>
-  	<path id="Socket.userclasspath">
-  	        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/jackson-annotations-2.8.1.jar"/>
-  	        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/jackson-core-2.8.1.jar"/>
-  	        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/jackson-databind-2.8.1.jar"/>
-  	        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/json-20160807.jar"/>
-  	        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/log4j-core-2.6.2.jar"/>
-  	        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/netty-all-4.1.5.Final.jar"/>
-  	        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/netty-socketio-1.7.7 .jar"/>
-  	        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/slf4j-api-1.7.22.jar"/>
-  	 </path>
-     <path id="Apache Tomcat v8.0 [Apache Tomcat v8.0].libraryclasspath">
+    <path id="Apache Tomcat v8.0 [Apache Tomcat v8.0].libraryclasspath">
         <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/annotations-api.jar"/>
         <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/catalina-ant.jar"/>
         <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/catalina-ha.jar"/>
@@ -142,12 +108,45 @@
         <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/tomcat-websocket.jar"/>
         <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/websocket-api.jar"/>
     </path>
+    <path id="Socket.userclasspath">
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/jackson-annotations-2.8.1.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/jackson-core-2.8.1.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/jackson-databind-2.8.1.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/json-20160807.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/log4j-core-2.6.2.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/netty-all-4.1.5.Final.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/netty-socketio-1.7.7 .jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/slf4j-api-1.7.22.jar"/>
+    </path>
+    <path id="hibernate.userclasspath">
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/antlr-2.7.7.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/cdi-api-1.1.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/classmate-1.3.1.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/dom4j-1.6.1.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/el-api-2.2.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/geronimo-jta_1.1_spec-1.1.1.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/hibernate-commons-annotations-5.0.1.Final.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/hibernate-core-5.2.4.Final.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/hibernate-jpa-2.1-api-1.0.0.Final.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/hibernate-validator-5.3.3.Final.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/hibernate-validator-annotation-processor-5.3.3.Final.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/hibernate-validator-cdi-5.3.3.Final.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/jandex-2.0.0.Final.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/javassist-3.11.0.GA.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/javassist-3.20.0-GA.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/javax.el-2.2.4.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/javax.el-api-2.2.4.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/javax.inject-1.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/jboss-interceptors-api_1.1_spec-1.0.0.Beta1.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/jboss-logging-3.3.0.Final.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/jsr250-api-1.0.jar"/>
+        <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/validation-api-1.1.0.Final.jar"/>
+    </path>
     <path id="HeathrowWebPage.classpath">
         <pathelement location="build/classes"/>
         <path refid="Web App Libraries.libraryclasspath"/>
         <path refid="EAR Libraries.libraryclasspath"/>
         <path refid="struts2.userclasspath"/>
-        <path refid="hibernate.userclasspath"/>
         <path refid="JUnit.userclasspath"/>
         <pathelement location="lib/junit/hamcrest-core-1.3.jar"/>
         <pathelement location="lib/junit/junit-4.12.jar"/>
@@ -158,6 +157,7 @@
         <path refid="Apache Tomcat v8.0 [Apache Tomcat v8.0].libraryclasspath"/>
         <pathelement location="lib/mockito-all-1.10.19.jar"/>
         <path refid="Socket.userclasspath"/>
+        <path refid="hibernate.userclasspath"/>
     </path>
     <target name="init">
         <mkdir dir="build/classes"/>
