--- a/build.xml
+++ b/build.xml
@@ -83,30 +83,30 @@
         <pathelement location="../../../../HeathrowWebPage/lib/pgjdbc-ng-0.6-complete.jar"/>
     </path>
     <path id="Apache Tomcat v8.0 [Apache Tomcat v8.0].libraryclasspath">
-        <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/annotations-api.jar"/>
-        <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/catalina-ant.jar"/>
-        <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/catalina-ha.jar"/>
-        <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/catalina-storeconfig.jar"/>
-        <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/catalina-tribes.jar"/>
-        <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/catalina.jar"/>
-        <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/ecj-4.5.jar"/>
-        <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/el-api.jar"/>
-        <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/jasper-el.jar"/>
-        <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/jasper.jar"/>
-        <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/jsp-api.jar"/>
-        <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/servlet-api.jar"/>
-        <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/tomcat-api.jar"/>
-        <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/tomcat-coyote.jar"/>
-        <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/tomcat-dbcp.jar"/>
-        <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/tomcat-i18n-es.jar"/>
-        <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/tomcat-i18n-fr.jar"/>
-        <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/tomcat-i18n-ja.jar"/>
-        <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/tomcat-jdbc.jar"/>
-        <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/tomcat-jni.jar"/>
-        <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/tomcat-util-scan.jar"/>
-        <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/tomcat-util.jar"/>
-        <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/tomcat-websocket.jar"/>
-        <pathelement location="../../Documents/Unibertsitatea/2016-2017/Web Engineering 1/bin/apache-tomcat-8.0.37/lib/websocket-api.jar"/>
+        <pathelement location="../../HeathrowWebPage/lib/annotations-api.jar"/>
+        <pathelement location="../../HeathrowWebPage/lib/catalina-ant.jar"/>
+        <pathelement location="../../HeathrowWebPage/lib/catalina-ha.jar"/>
+        <pathelement location="../../HeathrowWebPage/lib/catalina-storeconfig.jar"/>
+        <pathelement location="../../HeathrowWebPage/lib/catalina-tribes.jar"/>
+        <pathelement location="../../HeathrowWebPage/lib/catalina.jar"/>
+        <pathelement location="../../HeathrowWebPage/lib/ecj-4.5.jar"/>
+        <pathelement location="../../HeathrowWebPage/lib/el-api.jar"/>
+        <pathelement location="../../HeathrowWebPage/lib/jasper-el.jar"/>
+        <pathelement location="../../HeathrowWebPage/lib/jasper.jar"/>
+        <pathelement location="../../HeathrowWebPage/lib/jsp-api.jar"/>
+        <pathelement location="../../HeathrowWebPage/lib/servlet-api.jar"/>
+        <pathelement location="../../HeathrowWebPage/lib/tomcat-api.jar"/>
+        <pathelement location="../../HeathrowWebPage/lib/tomcat-coyote.jar"/>
+        <pathelement location="../../HeathrowWebPage/lib/tomcat-dbcp.jar"/>
+        <pathelement location="../../HeathrowWebPage/lib/tomcat-i18n-es.jar"/>
+        <pathelement location="../../HeathrowWebPage/lib/tomcat-i18n-fr.jar"/>
+        <pathelement location="../../HeathrowWebPage/lib/tomcat-i18n-ja.jar"/>
+        <pathelement location="../../HeathrowWebPage/lib/tomcat-jdbc.jar"/>
+        <pathelement location="../../HeathrowWebPage/lib/tomcat-jni.jar"/>
+        <pathelement location="../../HeathrowWebPage/lib/tomcat-util-scan.jar"/>
+        <pathelement location="../../HeathrowWebPage/lib/tomcat-util.jar"/>
+        <pathelement location="../../HeathrowWebPage/lib/tomcat-websocket.jar"/>
+        <pathelement location="../../HeathrowWebPage/lib/websocket-api.jar"/>
     </path>
     <path id="Socket.userclasspath">
         <pathelement location="../../../../HeathrowWebPage/WebContent/WEB-INF/lib/jackson-annotations-2.8.1.jar"/>
