wec xml error fix

--- a/build.xml
+++ b/build.xml
@@ -232,7 +232,7 @@
         <mkdir dir="${junit.output.dir}"/>
         <junit fork="yes" printsummary="withOutAndErr">
             <formatter type="xml"/>
-            <test name="HibernateDAOs.TestDAOAirline" todir="${junit.output.dir}"/>
+            <test name="switTest.JUnitSwitTest" todir="${junit.output.dir}"/>
             <jvmarg line="-ea"/>
             <classpath refid="HeathrowWebPage.classpath"/>
         </junit>
